--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>TP GitHub Actions</title>
-</head>
-<body>
-  <h1>Hello GitHub Actions</h1>
-</body>
-</html>
+<h1>D‚ploy‚ automatiquement avec GitHub Actions - Farah Gharbi</h1> 
