--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>D‚ploy‚ automatiquement avec GitHub Actions - Farah Gharbi</h1> 
+<meta charset="UTF-8"><h1>D‚ploy‚ automatiquement avec GitHub Actions - Farah Gharbi</h1> 
